# hello6

./: CMakeLists.txt  README.md
color-scheme/: README.md
plasma-theme/: README.md
window-decoration/: CMakeLists.txt  README.md
window-decoration/kdecoration/: CMakeLists.txt  hello.h  hello.json  hellobutton.cpp  hellobutton.h  hellodecoration.cpp  hellodecoration.h  helloexceptionlist.cpp  helloexceptionlist.h  hellosettingsdata.kcfg  hellosettingsprovider.cpp  hellosettingsprovider.h  hellosizegrip.cpp  hellosizegrip.h
window-decoration/kdecoration/config/: CMakeLists.txt  helloconfigwidget.cpp  helloconfigwidget.h  hellodetectwidget.cpp  hellodetectwidget.h  helloexceptiondialog.cpp  helloexceptiondialog.h  helloexceptionlistwidget.cpp  helloexceptionlistwidget.h  helloexceptionmodel.h  hellolistmodel.h  kcm_hellodecoration.json
window-decoration/kdecoration/config/ui/: helloconfigurationui.ui
window-decoration/kdecoration/libhellocommon/: CMakeLists.txt  helloboxshadowrenderer.cpp  helloboxshadowrenderer.h
